samples/_failures_safe/1761006425_7bc512_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4de3f6a6.c: In function ‘state_to_string’:
./samples/SAFE/__tmp_4de3f6a6.c:154:39: error: missing terminating " character
  154 |         case STATE_PROCESSING: return "PROC
      |                                       ^~~~~
./samples/SAFE/__tmp_4de3f6a6.c:154:9: error: expected expression at end of input
  154 |         case STATE_PROCESSING: return "PROC
      |         ^~~~
./samples/SAFE/__tmp_4de3f6a6.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4de3f6a6.c:154:9: error: expected declaration or statement at end of input
